[package]
name = "httpie"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"                                         # 错误处理
clap = { version = "4.3.19", features = ["derive"] } # 命令行解析
colored = "2"                                        # 命令终端多彩展示
jsonxf = "1.1"                                       # Json pretty print
mime = "0.3"                                         # 处理mime类型
reqwest = { version = "0.11", features = ["json"] }  # HTTP客户端
tokio = { version = "1", features = ["full"] }       # 异步处理库
