[package]
name = "thumbor"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6" # web服务器
anyhow = "1" # 错误处理
base64 = "0.21" # base64编码
bytes = "1" # 处理字节流
image = "0.24" # 处理图片
lazy_static = "1" # 宏初始化静态变量
lru = "0.11" #  LRU缓存
percent-encoding = "2" # url编码
photon-rs = "0.3" # 图片效果
prost = "0.11" # protobuf处理
reqwest = { version = "0.11", features = ["json"] } # HTTP客户端
serde = { version = "1", features = ["derive"] } # 序列化/反序列化
tokio = { version = "1", features = ["full"] } # 异步处理库
tower = { version = "0.4", features = [ # 服务处理与中间件
    "util",
    "timeout",
    "load-shed",
    "limit",
] }
tower-http = { version = "0.4", features = [ # http中间件
    "add-extension",
    "compression-full",
    "trace",
] }
tracing = "0.1" # 日志和追踪
tracing-subscriber = "0.3" # 日志和追踪

[build-dependencies]
prost-build = "0.11" # 编译protobuf
